--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "todo-app-backend",
+  "name": "bijayini_profile",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha ./tests/*.spec.js --timeout 10000"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "cors": "^2.8.5"
+    "mongoose": "^5.4.8"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2",
+    "supertest": "^3.4.2"
   }
 }
