--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -37,12 +37,12 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.3.1",
     "jest": "^24.1.0",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
     "prop-types": "^15.7.2",
     "react-router-dom": "^4.3.1",
+    "redux-devtools": "^3.5.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
@@ -56,18 +56,5 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "yarn test"
-    }
   }
 }
