--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "history": "^4.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
